--- a/app/views/admin/products/_variant_fields.html.haml
+++ b/app/views/admin/products/_variant_fields.html.haml
@@ -3,6 +3,8 @@
   %td= f.text_field :sku, class: "form-control"
   %td= f.text_field :price, class: "form-control"
   %td= f.text_field :count, class: "form-control"
+  %td= f.text_field :availability, class: "form-control"
+
   %td= f.check_box :enabled, class: "form-control"
   %td= link_to_remove_association "Удалить", f, class: "btn btn-danger btn-xs"
 
