--- a/app/views/user_mailer/new_order.html.haml
+++ b/app/views/user_mailer/new_order.html.haml
@@ -1,56 +1,74 @@
-%dl.dl-horizontal
-  %dt Имя
-  %dd
-    =@order.name
+!!!
+%html
+  %head
+    %meta{:charset => "utf-8"}/
+  %body
+    %h1 Поступил новый заказ
+    -if !@order.name.empty?
+      %dl.dl-horizontal
+        %dt Имя
+        %dd
+          =@order.name
 
-%dl.dl-horizontal
-  %dt e-mail
-  %dd
-    =@order.email
+    -if !@order.email.empty?
+      %dl.dl-horizontal
+        %dt E-mail
+        %dd
+          =@order.email
 
-%dl.dl-horizontal
-  %dt телефон
-  %dd
-    =@order.phone
+    -if !@order.phone.empty?
+      %dl.dl-horizontal
+        %dt Телефон
+        %dd
+          =@order.phone
 
-%dl.dl-horizontal
-  %dt Индекс
-  %dd
-    =@order.zip
+    -if !@order.zip.empty?
+      %dl.dl-horizontal
+        %dt Индекс
+        %dd
+          =@order.zip
 
-%dl.dl-horizontal
-  %dt Город
-  %dd
-    =@order.city
+    -if !@order.city.empty?
+      %dl.dl-horizontal
+        %dt Город
+        %dd
+          =@order.city
 
-%dl.dl-horizontal
-  %dt Адрес
-  %dd
-    =@order.address
+    -if !@order.address.empty?
+      %dl.dl-horizontal
+        %dt Адрес
+        %dd
+          =@order.address
 
-%dl.dl-horizontal
-  %dt Коментарий
-  %dd
-    =@order.comment
+    -if !@order.comment.empty?
+      %dl.dl-horizontal
+        %dt Коментарий
+        %dd
+          =@order.comment
 
-%dl.dl-horizontal
-  %dt Статус
-  %dd
-    =@order.state
+    %dl.dl-horizontal
+      %dt Статус
+      %dd
+        = @order.state
 
-%table.table
-  -@order.cart.cart_items.all.each do |item|
-    %tr
-      %td
-        =link_to product_path(item.product) do
-          =image_tag item.product.images.first.image.url(:thumb)
-      %td
-        =link_to item.product.name, product_path(item.product)
-      %td
-        %small
-          = item.variant.price_str
-      %td
-        =item.quantity
-      %td
-        %small
-          = item.variant.price_str(item.quantity)
+    %table.table.table-condensed
+      %tr
+        %td Товар
+        %td Цена
+        %td Количество
+        %td Сумма
+      -@order.cart.cart_items.all.each do |item|
+        %tr
+          %td
+            =link_to product_path(item.product) do
+              =image_tag item.product.images.first.image.url(:thumb)
+              =item.product.name
+          %td
+            %small
+              = item.product.price_str
+          %td
+            %small
+              = item.quantity
+          %td
+            %small
+              = item.variant.price_str(item.quantity)
