--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -49,7 +49,7 @@
               .font_4
                 =Settings.site_title_2
           .col-sm-3
-            %a.btn.btn-default.btn-block{href: cart_path}
+            %a.btn.btn-default.btn-block{href: new_order_path}
               .glyphicon.glyphicon-shopping-cart
               =t 'cart.count', count: @current_cart.cart_items.count
             %br
