--- a/app/assets/stylesheets/orders.css.scss
+++ b/app/assets/stylesheets/orders.css.scss
@@ -1,3 +1,12 @@
-// Place all the styles related to the Orders controller here.
+// Place all the styles related to the Carts controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+#order-info>.modal-dialog{
+    width: 900px;
+}
+
+#quantity
+{
+  width:100px;
+}
