--- a/app/views/user_mailer/new_order.html.haml
+++ b/app/views/user_mailer/new_order.html.haml
@@ -51,6 +51,11 @@
       %dd
         = @order.state
 
+    %dl.dl-horizontal
+      %dt Ссылка на заказ
+      %dd
+        ="#{Settings.site_url}orders/#{@order.secure_key}"
+
     %table.table.table-condensed
       %tr
         %td Товар
@@ -60,9 +65,7 @@
       -@order.cart.cart_items.all.each do |item|
         %tr
           %td
-            =link_to product_path(item.product) do
-              =image_tag item.product.images.first.image.url(:thumb)
-              =item.product.name
+            =item.product.name
           %td
             %small
               = item.product.price_str
