--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -51,6 +51,8 @@
               =link_to Page.model_name.human(count: 2) , admin_pages_path
             %li
               =link_to Promotion.model_name.human(count: 2), admin_promotions_path
+            %li
+              =link_to 'Импорт Moscanella', '/admin/moscanella/new'
         .col-sm-9
           .page-header
             %h1=@title
