--- a/app/views/admin/promotions/_form.html.haml
+++ b/app/views/admin/promotions/_form.html.haml
@@ -11,7 +11,8 @@
       = f.input :description, as: :ckeditor, input_html: {ckeditor: {toolbar: [{name: 'Edit', items: ['Cut', 'Copy', 'Paste', 'PasteText', 'PasteFromWord', '-', 'Undo', 'Redo' ]}, {name: 'basicstyles', groups: [ 'basicstyles', 'cleanup' ], items: [ 'Bold', 'Italic', 'Underline', 'Strike', 'Subscript', 'Superscript', '-', 'RemoveFormat' ]}, {name: 'Other', items:['Source', 'Image', 'Table']} ]}}
       = f.input :enabled
       = f.input :has_banner
-      = f.input :banner, as: :image_preview, input_html: {preview_version: :thumb}
+      = f.input :banner, as: :image_preview
+      /, input_html: {preview_version: :thumb}
       = f.input :send_mail
       .row
         %label.col-sm-3.control-label
