--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -62,6 +62,8 @@
 
     .container-fixed
       %nav.navbar.text-center
+        %a.btn.btn-primary.navbar-btn{href: root_path}
+          Главная
         %a.btn.btn-primary.navbar-btn{href: catalog_path}
           Каталог
         -Page.in_menu.each do |page|
@@ -113,6 +115,8 @@
             =image_tag('payment_methods.png')
           .col-sm-4
             %ul
+              %li
+                =link_to 'Главная', root_path
               %li
                 =link_to 'Каталог', catalog_path                    
               -Page.in_footer.each do |page|
