--- a/app/views/main/show.html.haml
+++ b/app/views/main/show.html.haml
@@ -1,9 +1,10 @@
-.row
-  -if @banners.count>0
+-if @banners.count>0
+  .row.text-center
     %ul#lightSlider
       -@banners.each do |banner|
         %li
-          =image_tag(banner.banner.url, {title:banner.name, alt:banner.name})
+          =link_to banner do
+            =image_tag(banner.banner.url, {title:banner.name, alt:banner.name})
 .row
   -@categories.each do |cat|
     .col-md-3.col-sm-4.col-xs-12
