--- a/app/assets/stylesheets/products.css.scss
+++ b/app/assets/stylesheets/products.css.scss
@@ -149,9 +149,10 @@ span.new-price{
 		padding: 0; /* Убираем поля */
 		margin-left: 0px; /* Отступ слева */
     	ul{
-			padding-top: 10px;
-	    	font-weight: 400;
-    	}
+			padding-top: 5px;
+			padding-bottom: 25px;   	
+			font-weight: 400;
+		}
     }
     li{
 		-webkit-column-break-inside: avoid; /* Chrome, Safari, Opera */
