--- a/app/views/admin/products/index.html.haml
+++ b/app/views/admin/products/index.html.haml
@@ -1,3 +1,7 @@
+=form_tag '/admin/products', method: :get do
+  =select_tag :category, options_from_collection_for_select(@categories, "id", :name_with_path, selected: @category.id)
+  =submit_tag 'Отфильтровать'
+
 = paginate @products
 %table.table.table-striped
   %thead
