--- a/app/assets/stylesheets/admin/admin.css.scss
+++ b/app/assets/stylesheets/admin/admin.css.scss
@@ -12,6 +12,7 @@
 @import "bootstrap";
 @import "pages";
 @import "products";
+@import "categories";
 @import "fancybox";
 @import "jquery-ui";
 @import "select2";
