--- a/app/views/admin/categories/index.html.haml
+++ b/app/views/admin/categories/index.html.haml
@@ -1,20 +1,3 @@
-= paginate @categories
-%table.table.table-striped
-  %thead
-    %tr
-      %th= Category.human_attribute_name(:name)
-      %th= Category.human_attribute_name(:enabled)
-      %th=t '.actions', :default => t("helpers.actions")
-  %tbody#categories_list.sortable
-    - @categories.each do |category|
-      %tr{id: category.id}
-        %td= category.name_with_path
-        %td
-          -if category.enabled
-            %i.glyphicon.glyphicon-ok
-        %td
-          = link_to t('.edit', :default => t("helpers.links.edit")), edit_admin_category_path(category), :class => 'btn btn-xs btn-default'
-          = link_to t('.destroy', :default => t("helpers.links.destroy")), admin_category_path(category), :method => :delete, :data => { :confirm => t('.confirm', :default => t("helpers.links.confirm", :default => 'Are you sure?')) }, :class => 'btn btn-xs btn-danger'
-= paginate @categories
+= render partial: 'index_item', locals: {categories: @categories}
 
 = link_to t('.new', :default => t("helpers.links.new")), new_admin_category_path, :class => 'btn btn-primary'
