--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -69,7 +69,7 @@
             Каталог
             %span.caret
           %ul.dropdown-menu
-            -Category.root.each do |cat|        
+            -Category.root.enabled.each do |cat|        
               %li
                 =link_to cat.name, category_path(cat.path, cat.id)
 
