--- a/app/views/admin/settings/edit.html.haml
+++ b/app/views/admin/settings/edit.html.haml
@@ -4,6 +4,8 @@
   = settings_form.input :site_url, input_html: { value: Settings.site_url }
   = settings_form.input :owner_phone, input_html: { value: Settings.owner_phone }
   = settings_form.input :owner_email, input_html: { value: Settings.owner_email }
+  = settings_form.input :metrika, input_html: { value: Settings.metrika }, as: :text
+
   = settings_form.input :disable_categories, as: :boolean, input_html: { checked: Settings.disable_categories }
   = settings_form.input :hide_count_in_product, as: :boolean, input_html: { checked: Settings.hide_count_in_product }
   = settings_form.input :enable_variants, as: :boolean, input_html: { checked: Settings.enable_variants }
