--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -131,5 +131,4 @@
         &copy; Интернет-магазин «Рыболофф» 2001–2015
         .small
           Сайт Рыболофф разрешает вам просматривать и загружать материалы этого сайта (далее «Сайт») только для личного некоммерческого использования, при условии сохранения вами всей информации об авторском праве и других сведений о праве собственности, содержащихся в исходных материалах и любых их копиях. Запрещается изменять материалы этого Сайта, а также распространять или демонстрировать их в любом виде или использовать их любым другим образом для общественных или коммерческих целей. Любое использование этих материалов на других сайтах или в компьютерных сетях запрещается. 
-    <!-- Yandex.Metrika counter -->
-    <!-- RedHelper -->
+    =raw Settings::metrika
