--- a/app/views/products/show.html.haml
+++ b/app/views/products/show.html.haml
@@ -49,7 +49,7 @@
             =@product.variants.first.availability
             %br
             %strong Цена
-            =@product.variants.first.price_str
+            =raw @product.variants.first.price_str
             -if Settings.hide_count_in_product
               = f.hidden_field :quantity
               %button.btn.btn-sm.btn-primary{type:'submit'}
